# LogSmith

./: .coveragerc  .gitignore  CHANGELOG.md  LICENSE  README.md  README_2.md  coverage.ini  pyproject.toml  pytest.ini  run_coverage.py
LogSmith/: __init__.py  async_rotation.py  async_smartlogger.py  colors.py  file_registry.py  formatter.py  helpers.py  level_registry.py  levels.py  metadata.py  rotation.py  rotation_base.py  smartlogger.py  themes.py
docs/: 01-Overview.md  01__Introduction.md  02-Installation.md  02__Installation_&_Setup.md  03-Quick_Start.md  03__Quickstart.md  04-Project_Structure.md  04__Core_Concepts.md  05-Core_Concepts.md  05__Console_Logging.md  06-Console_Logging.md  06__File_Logging.md  07-File_Logging.md  07__Structured_Formatting.md  08-Rotation_Logic.md  08__JSON_&_NDJSON_Logging.md  09-Auditing.md  09__AsyncSmartLogger.md  10-Structured_Formatting.md  10__Rotation_&_Retention.md  11-Colors_&_Gradient_System.md  11__Themes_&_Color_System.md  12-Custom_Log_Levels.md  12__Auditing.md  13-Themes.md  13__Dynamic_Log_Levels.md  14-Logger_Hierarchy.md  14__Logger_Hierarchy.md  15-Logger_Lifecycle.md  15__Lifecycle_Management.md  16-Extras_&_Structured_Fields.md  16__Diagnostics_&_Debugging.md  17-Exceptions_&_Diagnostics.md  17__Performance_&_Benchmarks.md  18-Performance_&_Efficiency.md  18__Best_Practices.md  19-Best_Practices_&_Patterns.md  19__Examples_&_Recipes.md  20-Full_Examples.md  20__Security_Notes.md  (+19 more)
docs2/: 00_Emoji_catalog.md  00__Table_of_Contents.md  01_Introduction.md  02_Installation & Setup.md  02_Installation_&_Setup.md  02__Installation_&_Setup.md  03_Quickstart.md  04_Core Concepts.md  04_Core_Concepts.md  04__Core_Concepts.md  05_Console Logging.md  05_Console_Logging.md  06_File Logging.md  06_File_Logging.md  07_Structured Formatting.md  07_Structured_Formatting.md  08_JSON & NDJSON Logging.md  08_JSON_&_NDJSON_Logging.md  09_AsyncSmartLogger.md  09__AsyncSmartLogger.md  10_Rotation & Retention.md  10_Rotation_&_Retention.md  11_Themes & Color System.md  11_Themes_&_Color_System.md  11__Themes_&_Color_System.md  12_Auditing.md  13_Dynamic Log Levels.md  13_Dynamic_Log_Levels.md  14_Logger Hierarchy.md  14_Logger_Hierarchy.md  15_Lifecycle Management.md  15_Lifecycle_Management.md  15__Lifecycle_Management.md  16_Diagnostics & Debugging.md  16_Diagnostics_&_Debugging.md  17_Performance & Benchmarks.md  17_Performance_&_Benchmarks.md  18_Best Practices.md  18_Best_Practices.md  18__Best_Practices.md  (+24 more)
examples/: 00__LogSmith_package_metadata.py  00_async_check.py  00_async_check_2.py  01_basic_async_logging.py  01_basic_logging.py  02_formatting_async_demo.py  02_formatting_demo.py  03_file_output_async_demo.py  03_file_output_demo.py  04_rotation_async_demo.py  04_rotation_demo.py  05_hierarchy_async_demo.py  05_hierarchy_demo.py  06_auditing_async_demo.py  06_auditing_demo.py  07_gradient_async_demo.py  07_gradient_demo.py  08_stress_test.py  08_stress_test_async.py  09_themes_async_demo.py  09_themes_demo.py  10_removing_handlers_from_loggers.py  10_removing_handlers_from_loggers_async.py  11_misc_issues_demo.py  11_misc_issues_demo_async.py  12_async_check.py  12_async_json_logging.py  12_json_logging.py
smartlogger/: __init__.py  colors.py  formatter.py  level_registry.py  levels.py  rotation.py  smartlogger.py  themes.py
temp/: 00__Emoji_catalog.md  01__create_test_skeleton.py  02__create_test_harness.py  03__create_unit_tests.py  04__create_filesystem_tests.py  05__generate_async_tests.py  generate_concurrency_tests.py
tests/: conftest.py  helpers.py  test_JSON_NDJSON_formatter.py  test_async_handler.py  test_async_rotation.py  test_async_rotation_advanced.py  test_async_rotation_advanced_2.py  test_async_smartlogger.py  test_async_smartlogger_core.py  test_async_smartlogger_coverage_gaps.py  test_async_smartlogger_errors.py  test_async_smartlogger_recoverable_after_all.py  test_colors.py  (+30 more)
(+160 files in other folders)
