[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LogSmith"
version = "1.7.0"
description = "A high-performance, structured, color-aware logging framework for Python"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]

authors = [
    { name = "Gilad Pachter" }
]

keywords = [
    "logging",
    "log rotation & retention",
    "concurrency",
    "thread-safe",
    "python logging",
    "colored logging"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: System :: Logging",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/yourname/LogSmith"
Documentation = "https://github.com/yourname/LogSmith#readme"
Source = "https://github.com/yourname/LogSmith"
Issues = "https://github.com/yourname/LogSmith/issues"

[tool.setuptools]
packages = ["LogSmith"]

[tool.setuptools.package-data]
LogSmith = ["py.typed"]
